Fix home overflow & WIP puissance4

--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -12,8 +12,6 @@ html {
 
 body {
   @media (min-width: 720px) {
-    height: 100vh;
-    min-height: 700px;
     margin-top: 0;
     overflow-x: hidden;
   }
